# open2026

./: .dockerignore  .gitignore  AGENTS.md  DESIGN.md  Dockerfile  IDENTITY.md  OPERATIONS.md  PHASE1_COMPLETE.md  README.md  SOUL.md  USER.md  docker-compose.yml  iqs.bat  iqs.py  iqs.sh  main.py  ops-jobs.json  pyproject.toml  release.sh  requirements.txt  skill-vetting-ops-dashboard-framework.md
.openclaw/: workspace-state.json
OPERATIONS/: health-check-20250317-1245.md
backups/: DESIGN.md.backup-1776004168
cli/: __init__.py  main.py
core/: __init__.py  assessment.py  capability.py  font_config.py  heatmap.py  insights.py  regression.py  report.py  spc.py  statistics.py
data/: diameter_clean.csv  diameter_sample.csv  quality_matrix.csv  regression_sample.csv
deployments/: git-remote-deployment-2025-03-17.md
docs/: index.html
incidents/: TEMPLATE.md
monitoring/: long-running-monitor.md
operations/: gateway-process-record-2025-03-17.md
playbooks/: disk-space-crisis.md  openclaw-gateway-recovery.md
scripts/: feishu-notify.py  memory-hygiene.py  monitor.py
skills/: .skills_store_lock.json
skills/ops-framework/: ops-monitor-feishu-wrapper.sh
skills/ops-framework/scripts/: health_status.py
web/: __init__.py  app.py  config.py  utils.py
web/api/: quality.py  spc.py
web/static/css/: industrial-theme-upgrade.css  industrial-theme-upgrade.css.bak  industrial-theme.css
web/static/js/: app.js
web/templates/: index.html
web/utils/: data_parser.py  file_handler.py  quality_statistics.py  spc_charts.py
