[project]
name = "industrial-quality-stats"
version = "1.0.0-mvp"
description = "工业质量统计分析工具 (类似 Minitab)"
authors = [{name = "德善", email = "code@openclaw.ai"}]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "reportlab>=4.0.0",
    "jinja2>=3.1.0",
    "click>=8.1.0",
]

[project.scripts]
iqs = "cli.main:cli"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88